--- a/workshop-5/exercises/05/Dockerfile
+++ b/workshop-5/exercises/05/Dockerfile
@@ -1,6 +1,5 @@
 FROM amazonlinux:2023
 RUN yum update && yum install -y nginx && yum clean all
-WORKDIR /usr/share/nginx/html # working directory
-COPY dist/ .
+COPY dist/ /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
