--- a/workshop-5/exercises/08/Dockerfile
+++ b/workshop-5/exercises/08/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian
 ARG FUNCTION_DIR="/opt/lambda/"
-RUN apt-get -y update && apt-get -y upgrade && apt-get -y install python3 python3-pip && apt-get -y clean
+RUN apt-get -y update && apt-get -y upgrade && apt-get -y install python3 pipx && apt-get -y clean
 RUN mkdir -p ${FUNCTION_DIR}
 WORKDIR ${FUNCTION_DIR}
 RUN pipx install awslambdaric
